vlib/v/checker/tests/no_method_on_interface_propagation.out
vlib/v/checker/tests/no_method_on_interface_propagation.vv:18:5: error: unknown method: `Cat.foo`
   16 |     a := new_animal('persian')
   17 |     if a is Cat {
   18 |         a.foo()
      |           ~~~~~
   19 |     }
   20 | }